<resources>
    <string name="app_name">电玩城捕鱼</string>
    <string name="user_login_info">迅雷帐号登录</string>
    <string name="user_account_not_exist">该帐号不存在</string>
    <string name="user_account_freezed">该帐号已被冻结</string>
    <string name="user_account_edit_hint">帐号</string>
    <string name="user_account_regist_edit_hint">请输入数字和字符</string>
    <string name="user_account_not_match">帐号和密码不匹配</string>
    <string name="user_account_name_empty_hint">请输入迅雷帐号</string>
    <string name="user_account_pwd_empty_hint">请输入密码</string>
    <string name="user_account_no_net_hint">当前网络不可用，请稍后尝试。</string>
    <string name="user_no_account_hint">没有迅雷帐号？到i.xunlei.com注册一个吧！</string>
    <string name="user_account_regist_hint">修改帐号资料请登录i.xunlei.com</string>
    <string name="login_password_hint_text">请输入密码</string>
    <string name="login_ok_button">帐户登录</string>
    <string name="login_oneclick_regist">一秒注册</string>
    <string name="login_buttom_hint_text">没有迅雷帐号？到i.xunlei.com注册一个吧！</string>
    <string name="login_user_not_exist">该用户不存在</string>
    <string name="logining">登录中</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="registing">注册中</string>
    <string name="regist_user_account_exist">该帐号已注册</string>
    <string name="common_imageview_contentdescription">图片描述</string>
    <string name="user_center">用户中心</string>
    <string name="user_info_nickname">nickname</string>
    <string name="user_info_level">VIP : 0 级</string>
    <string name="menu_paycenter">充值中心</string>
    <string name="menu_about_us">关于我们</string>
    <string name="exit_login">退出登录</string>
    
    <string name="payment_title_choose_charge_way">请选择支付方式</string>
    <string name="payment_title_choose_money">请选择充值金额</string>

    <string name="payment_alipay">支付宝支付</string>
    <string name="payment_support_alipay">支持网银网页支付，支持客户端</string>
    <string name="payment_credit">信用卡快捷支付</string>
    <string name="payment_support_credit">支持大额支付，更方便</string>
    
    <string name="next_step">下一步</string>
    <string name="submit_order">确认充值</string>
    <string name="apily_success">恭喜你，充值成功！</string>
    <string name="chargecenter">充值中心</string>
    <string name="charge_account">充值帐户：</string>
    <string name="charge_num">充值数量：</string>
    <string name="charge_num_hint">请输入金额</string>
    <string name="charge_num_no_colon">充值数量</string>
    <string name="charge_unit">元</string>
    <string name="charge_game">充值游戏：</string>
    <string name="charge_success">完成</string>
    <string name="charge_box_title">帐户充值</string>
    <string name="charge_desc">充值成为看看游戏VIP，好礼不断！</string>
    <string name="charge_num_desc">(高级VIP享有更多特权)</string>
    
    <string name="money_exchange_welcome">欢迎您：</string>
     <string name="money_exchange_welcomegame">游戏：</string>
    <string name="money_exchange_start">您将充值</string>
    <string name="money_exchange_mid">可换取</string>
    <string name="money_10">10元</string>
    <string name="money_50">50元</string>
    <string name="money_100">100元</string>
    <string name="money_300">300元</string>
    <string name="money_500">500元</string>
    <string name="money_1000">1000元</string>
    <string name="money_other">其他</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="enter_game_text">进入游戏</string>
    <string name="xlniu_register_verifycodehit">验证码</string>
    <string name="xlniu_register_verifycodepic">验证码图片</string>
    <string name="xlniu_register_viewtext">注册</string>
    <string name="user_phone_edit_hint">手机号</string>
    <string name="login_smsverifycode_hint_text">请输入验证码</string>
    <string name="phoneregister_smsverifycode">获取验证码</string>
    <string name="xlniu_phoneregister_smsverifycodehit">验证码</string>
    <string name="register_sms_verifycode">获取验证码</string>
    <string name="phone_login_buttom_hint_text">手机号登录</string>
    <string name="login_phone_regist">快速注册</string>
    <string name="username_register_buttom_hint_text">用户名注册</string>
    <string name="usernamelogin">迅雷帐号登录</string>
    <string name="phone_register_info">手机号注册</string>
    <string name="user_register_info">迅雷帐号注册</string>
    <string name="dialog_cancel">退出游戏</string>
</resources>