<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_bg"
    android:orientation="vertical" >

    <!-- 头部标题栏布局 -->
   <com.xunlei.niux.mobilegame.sdk.common.ui.SimpleTitleBar
        android:id="@+id/charge_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
   
    <RelativeLayout 
        android:id="@+id/rl_success"
        android:layout_width="fill_parent"
        android:layout_height="180dip"
        android:background="@drawable/white_box_bg"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="8dip"
        >
        <ImageView 
            android:id="@+id/image_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paysuccess"
            android:layout_marginLeft="28dip"
            android:layout_marginTop="40dip"
            android:scaleType="centerCrop"
            android:contentDescription="@string/common_imageview_contentdescription"
            />
        <TextView 
            android:id="@+id/text_view_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/apily_success"
            android:textColor="#20222A"
            android:layout_toRightOf="@id/image_success"
            android:layout_marginTop="42dip"
            android:layout_marginLeft="8dip"
            />
        <TextView 
            android:id="@+id/text_view_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/charge_account"
            android:textColor="#20222A"
            android:layout_alignLeft="@id/text_view_success"
            android:layout_below="@id/text_view_success"
            android:layout_marginTop="8dip"
            />
        <TextView 
            android:id="@+id/text_view_account_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#20222A"
            android:singleLine="true"
            android:layout_toRightOf="@id/text_view_account"
            android:layout_alignTop="@id/text_view_account"
            android:layout_marginLeft="5dip"
            />
         <TextView 
            android:id="@+id/text_view_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/charge_num"
            android:textColor="#20222A"
            android:layout_alignLeft="@id/text_view_account"
            android:layout_below="@id/text_view_account"
            android:layout_marginTop="2dip"
            />
         <!-- 购买数目 -->
          <TextView 
            android:id="@+id/text_view_money_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#FF9600"
            android:textStyle="bold"
            android:layout_toRightOf="@id/text_view_money"
            android:layout_alignTop="@id/text_view_money"
            android:layout_marginLeft="5dip"
            />
          <TextView 
            android:id="@+id/text_view_money_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/charge_unit"
            android:textColor="#20222A"
            android:layout_toRightOf="@id/text_view_money_num"
            android:layout_alignTop="@id/text_view_money_num"
            android:layout_marginTop="1dip"
            />
          
          <TextView 
            android:id="@+id/text_view_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/charge_game"
            android:textColor="#20222A"
            android:layout_alignLeft="@id/text_view_money"
            android:layout_below="@id/text_view_money"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="25dip"
            />
           <TextView 
            android:id="@+id/text_view_game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#20222A"
            android:singleLine="true"
            android:layout_toRightOf="@id/text_view_game"
            android:layout_alignTop="@id/text_view_game"
            android:layout_marginLeft="5dip"
            />
    </RelativeLayout>
       
    <Button 
        android:id="@+id/button_finish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/charge_success"
        android:textSize="16sp"
        android:background="@drawable/login_dlg_ok_btn_selector"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="20dip"
        />
</LinearLayout>