<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dlg_bg"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dlg_bg"
    android:minWidth="400dp"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp" >

    <!-- title&内容 -->

    <LinearLayout
        android:id="@+id/dlg_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/dlg_title"
            style="@style/dlg_title_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="9dp"
            android:paddingLeft="17dp"
            android:paddingTop="9dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/dlg_line"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/common_imageview_contentdescription"
            android:scaleType="fitXY"
            android:src="@drawable/dlg_line" />

        <TextView
            android:id="@+id/dlg_content"
            style="@style/dlg_content_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="10"
            android:minHeight="90dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="14dp"
            android:visibility="visible" />
    </LinearLayout>

    <!-- 双btn -->

    <LinearLayout
        android:id="@+id/dlg_2btn_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="14dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="14dp"
        android:visibility="gone"
        android:weightSum="2" >

        <TextView
            android:id="@+id/dlg_left_btn"
            style="@style/dlg_left_button_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/common_imageview_contentdescription"
            android:src="@android:color/transparent" >
        </ImageView>

        <TextView
            android:id="@+id/dlg_right_btn"
            style="@style/dlg_right_button_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

    <!-- 单btn -->

    <LinearLayout
        android:id="@+id/dlg_1btn_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="14dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="14dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/dlg_bottom_btn"
            style="@style/dlg_left_button_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>